Fix: 1) Fixed flickering on initial page load in dark theme mode by adding <script is:inline> </script> directive in ThemeToggle.astro file; 2) Fixed SVG icon animation crash by adding data-first-start attribute to the theme switch button on initial page load and using it in CSS to speed up animation to 0ms при первичной загрузке станицы в режиме темной темы.

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -101,8 +101,14 @@ header {
 
   z-index: 1100;
 
-  &:hover,
-  &:focus {
+  // &:hover,
+  // &:focus {
+  //   outline: 0;
+  //   opacity: 1;
+  //   background: hsl(0 0% 50% / 0.15);
+  // }
+
+  &:hover {
     outline: 0;
     opacity: 1;
     background: hsl(0 0% 50% / 0.15);
@@ -197,6 +203,7 @@ header {
 }
 
 // Кнопка переключения темы (Btn > svg)
+// ::after
 #theme-toggle-btn {
   &::after {
     content: attr(aria-label);
@@ -232,23 +239,28 @@ header {
   }
 }
 
-.dark-theme #theme-toggle-btn::after {
-  color: #{$neutral-12};
-  background: #{$neutral-4};
-}
-
 .light-theme .theme-toggle-circle {
   transform: translateX(0%);
+  transition: transform 400ms ease-in-out;
 }
 
 .dark-theme .theme-toggle-circle {
   transform: translateX(15%);
-  transition: transform 500ms ease-in-out;
+  transition: transform 400ms ease-in-out;
+}
+
+.dark-theme #theme-toggle-btn[data-first-start='true'] .theme-toggle-circle {
+  transition: transform 0ms;
 }
 
 .theme-toggle-sun {
   transform-origin: center center;
   transition: transform 750ms cubic-bezier(0.16, 0.18, 0.45, 1.32);
+}
+
+#theme-toggle-btn[data-first-start='true'] .theme-toggle-sun {
+  transform-origin: center center;
+  transition: transform 0ms;
 }
 
 .dark-theme .theme-toggle-sun {
